--- a/src/index.css
+++ b/src/index.css
@@ -82,11 +82,43 @@ body {
   margin: 0;
   position: relative;
   height: 100vh;
-  background: url('/src/assets/mobile/bg-image-daytime.jpg') no-repeat center
-    center;
   background-size: cover;
   font-family: var(--font-family);
 }
+
+body.daytime {
+  background: url('/src/assets/mobile/bg-image-daytime.jpg') no-repeat center
+    center;
+}
+
+body.nighttime {
+  background: url('/src/assets/mobile/bg-image-nighttime.jpg') no-repeat center
+    center;
+}
+
+/* Responsive Backgrounds */
+@media (min-width: 768px) {
+  body.daytime {
+    background: url('/src/assets/tablet/bg-image-daytime.jpg') no-repeat center
+      center;
+  }
+  body.nighttime {
+    background: url('/src/assets/tablet/bg-image-nighttime.jpg') no-repeat
+      center center;
+  }
+}
+
+@media (min-width: 1024px) {
+  body.daytime {
+    background: url('/src/assets/desktop/bg-image-daytime.jpg') no-repeat center
+      center;
+  }
+  body.nighttime {
+    background: url('/src/assets/desktop/bg-image-nighttime.jpg') no-repeat
+      center center;
+  }
+}
+
 
 body::before {
   content: '';
