--- a/src/styles/time.scss
+++ b/src/styles/time.scss
@@ -182,6 +182,7 @@ $breakpoint-desktop: 1024px;
    flex-direction: column;
    justify-content: space-between;
    width: 75%;
+   gap:1rem;
 
    @media (min-width: $breakpoint-desktop) {
         flex-direction: row;
@@ -190,6 +191,7 @@ $breakpoint-desktop: 1024px;
    .time-year, .day-week{
     display: flex;
     flex-direction: column;
+    gap:1rem;
 
     @media (min-width: $breakpoint-desktop) {
         gap:3.5rem;
@@ -201,7 +203,12 @@ $breakpoint-desktop: 1024px;
    .details-wrap{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
+
+ @media (min-width: $breakpoint-desktop) {
+        gap:1rem;
+      }
+
    }
 
    .details-head{
