--- a/src/styles/time.scss
+++ b/src/styles/time.scss
@@ -171,8 +171,8 @@ $breakpoint-desktop: 1024px;
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100vw;
-  height: 50vh;
+  width: 100dvw;
+  height: 50dvh;
   padding: 1rem 0;
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
