--- a/src/styles/quotes.scss
+++ b/src/styles/quotes.scss
@@ -56,3 +56,16 @@ $breakpoint-desktop: 1024px;
 
     }
 }
+
+.refresh-btn.rotating img {
+  animation: spin 0.6s linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
